# backend_template

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
core/: general.py
lib/: general.py  init.py  log.py
pages/: test.py
