[project]
name = "Backend"
version = "1.0.0"
description = "The code template of Flask-based backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "ipykernel>=7.1.0",
    "langchain>=1.0.7",
    "langchain-ollama>=1.0.0",
    "ollama>=0.6.1",
]
